<resources>
    <string name="app_name">Junk Mail Killer</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_keywords">Junk keywords</string>
    <string name="action_ex_keywords">Exception keywords</string>
    <string name="start_service">START SERVICE</string>
    <string name="stop_service">STOP SERVICE</string>
    <string name="heading">Moves junk mail to JUNK_MAIL_KILLER- folder at your mail server.</string>
    <string name="save_settings">Save settings</string>
    <string name="save_keyword">Save keyword</string>
    <string name="add_new_keyword">Add new keyword</string>
    <string name="save_ex_keyword">Save exception keyword</string>
    <string name="add_new_ex_keyword">Add new exception keyword</string>

    <string name="hint_host">Arriving mail server.</string>
    <string name="hint_user">Arriving mail server userid.</string>
    <string name="hint_password">Arriving mail server password.</string>
    <string name="hint_check_frequency">Frequency to check junk mails (in seconds).</string>

    <string name="msg_no_keywords_found">No keywords found. Add keywords before starting the service.</string>
    <string name="msg_check_settings">Check Settings. Connection to mail server can NOT be established!</string>
    <string name="msg_settings_ok">Settings OK. Connection to mail server can be established.</string>
    <string name="msg_invalid_settings">Invalid Settings. Connection to mail server can NOT be established!</string>
    <string name="msg_keyword_added">Keyword added.</string>
    <string name="msg_ex_keyword_added">Execption keyword added.</string>

    <string name="key_text">Key</string>
    <string name="from_text">From</string>
    <string name="subject_text">Subject</string>
    <string name="content_text">Content</string>
    <string name="help_text">
        <![CDATA[
        <h1><b>Junk Mail Killer</b></h1>
        <b>General</b>
        <p>Application runs on background and monitors inbox folder of defined mail box. Junk mails are detected based on given keywords
        and mails are transferred to JUNK_MAIL_KILLER folder. This folder is automatically created by the app.</p>
        <p><b>NOTE! This is a demo version and so far tested only in Elisa/Saunalahti environment.</b></p>
        <b>Settings</b>
        <p>Here you can enter necessary data for the application to be able to contact your mail server. <br>You have to give the mail server name for the arriving mail, your user id
        (normally your email address) and your password. Also the frequency of how often mails are checked has to be given.
        <br>When you save your settings, application tests the connection and informs you if everything is OK. </p>
        <b>Junk keywords</b>
        <p>At this window you can enter keywords for identifying junk mails. Deleting keyword is done by just hitting it in the list.
        <br>Application checks if some of the
        given keywords are found in mails in inbox folder. Keyword is checked from sender, subject and
        the actual body of the mail. Check is not case sensitive and keyword can be just a part of a word.
        <br>For example: if keyword is win, then mails containing words winner, wins, winter, twin etc. would be considered
        as junk mail.</p>
        <b>Exception keywords</b>
        <p>At this window you can enter exception keywords. Deleting exception keyword is done by just hitting it in the list.
        <br>If exception keyword is found in mail, that mail is never considered
        as junk mail, even if it contains junk keywords. Exception keyword is checked from sender, subject and
        the actual body of the mail. Check is not case sensitive and exception keyword can be just a part of a word.</p>
        <b>Running the program</b>
        <p>If your settings and keywords are OK, you are ready to start the actual junk mail monitoring.
        Monitoring is a background process, so you can leave it running and start using other apps in your
        Android device. <br>You can go back to JunkMailKiller user interface anytime and for example change keywords.
        Just restart the app then to use new keywords.
         </p>]]>
    </string>
    <string name="delete_button">Delete</string>


</resources>
