<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SettingsActivity"
    android:onClick="saveSettings">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/keywordText"
        android:hint="@string/hint_host"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:width="300dp"
        android:autoText="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userText"
        android:hint="@string/hint_user"
        android:singleLine="true"
        android:layout_below="@+id/keywordText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:width="300dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwdText"
        android:hint="@string/hint_password"
        android:singleLine="true"
        android:layout_below="@+id/userText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:width="300dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frequenceText"
        android:hint="@string/hint_check_frequence"
        android:singleLine="true"
        android:layout_below="@+id/passwdText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:width="300dp"
        android:inputType="number" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_settings"
        android:id="@+id/saveButton"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="saveSettings"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
