<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".KeywordsActivity"
    android:id="@+id/keywordsLayout">


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:id="@+id/listView"
        android:layout_above="@+id/addKeywordButton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/keywordText"
        android:hint="@string/key_text"
        android:singleLine="true"
        android:width="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_keyword"
        android:id="@+id/saveButton"
        android:onClick="saveKeyword"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addKeywordButton"
        android:text="@string/add_new_keyword"
        android:onClick="addNewKeyword"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

</RelativeLayout>
