<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#a7c6f9">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textColor="#eeeeee"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:typeface="normal"
        android:layout_alignParentLeft="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startButton"
        android:text="@string/start_service"
        android:onClick="startService"
        android:layout_below="@+id/textView2"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="false"
        android:elegantTextHeight="false"
        android:textStyle="bold"
        android:typeface="normal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_service"
        android:id="@+id/stopButton"
        android:onClick="stopService"
        android:layout_below="@+id/startButton"
        android:textSize="40sp"
        android:layout_alignLeft="@+id/startButton"
        android:layout_alignStart="@+id/startButton"
        android:layout_alignRight="@+id/startButton"
        android:layout_alignEnd="@+id/startButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:textStyle="bold" />

</RelativeLayout>
